# loto

./: .env.example  .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  ESTEIRA_CI_CD_RESUMO.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.py  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  security.yml
app/: __init__.py
app/auth/: __init__.py  auth_handler.py  decorators.py  email_service.py  email_service_smtp.py  keycloak_config.py  keycloak_handler.py
app/models/: user.py
app/routes/: __init__.py  aposta.py  apostas.py  auth.py  auth_keycloak.py  estadisticas.py  main.py
app/templates/: analise_apostas.html  analise_resultado.html  aposta.html  apostas_registro.html  estatisticas.html  index.html  novo.html  sorte.html
app/templates/auth/: encerramento.html  login.html  verificar.html
app/utils/: aposta_manager.py  betting_analyzer.py  csv_handler.py  paths.py  recomendador_inteligente.py  sorte_analyzer.py  stats_calculator.py  validators.py
config/: pytest.ini  requirements.txt
docs/: APOSTAS_REGISTRO.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_IMPLEMENTATION.md  BETTING_FEEDBACK_SYSTEM.md  CHECKLIST_IMPLEMENTACAO.md  CI_CD_ARCHITECTURE.md  CI_CD_PIPELINE_OVERVIEW.md  COMMIT_CONVENTIONS.md  COMO_ACESSAR_SORTE.md  DEVELOPMENT.md  DIAGNOSTICO_TOKENS.md  ENCERRAMENTO_SERVIDOR.md  ENCONTRAR_TOKEN.md  ESTRUTURA_KEYCLOAK.md  GITGUARDIAN_API_KEY_GUIDE.md  GITHUB_ACTIONS_SETUP.md  GITHUB_SECRETS_DETAILED.md  GITHUB_SECRETS_VISUAL_GUIDE.md  IMPLEMENTACAO_SORTE.md  INDEX.md  INICIO_RAPIDO_AUTH.md  KEYCLOAK_IMPLEMENTACAO.md  KEYCLOAK_RELATORIO_FINAL.md  KEYCLOAK_SETUP.md  MIGRATION.md  PROJECT_STATUS.md  QUICK_START_AUTH.md  QUICK_START_CI_CD.md  README.md  REFACTORING_SUMMARY.md  REORGANIZACAO_REPOSITORIO.md  RESUMO_ENCERRAMENTO.md  RUN_TESTS.md  SLACK_WEBHOOK_GUIDE.md  SMTP_CONFIGURATION.md  SORTE_PAGINA_GUIA.md  SUMARIO_REORGANIZACAO.txt  TESTE_PRATICO.md  TESTING.md  (+1 more)
scripts/: criar_executavel.py  run.py  run_exe.py
tests/: conftest.py  test_auth.py  test_csv_handler.py  test_routes.py  test_stats_calculator.py  test_validators.py
